--- a/businessSidebar.html
+++ b/businessSidebar.html
@@ -12,7 +12,7 @@
  </ul>
  <h3><?php printf( "R%s\n" , $_SESSION[ "rNumber" ] ); ?></h3>
  <ul>
-  <li><a href="facultyHome.php">Home</a></li>
+  <li><a href="businessHome.php">Home</a></li>
   <li><a href="logout.php">Logout</a></li>
  </ul>
 </div>
