--- a/businessSidebar.html
+++ b/businessSidebar.html
@@ -8,7 +8,7 @@
   <li><a href="businessTextView.php">Course Text</a></li>
   <li><a href="businessSummerView.php">Summer Enrollment</a></li>
   <li><a href="businessRegularView.php">Regular Enrollment</a></li>
-  <li><a href="businessLevelView.php">Course Level Enrollment</a></li>
+<!--   <li><a href="businessLevelView.php">Course Level Enrollment</a></li> -->
  </ul>
  <h3><?php printf( "R%s\n" , $_SESSION[ "rNumber" ] ); ?></h3>
  <ul>
